added media query for mobile devices

--- a/index.html
+++ b/index.html
@@ -35,52 +35,56 @@
         <!------------ blogs area ---------- -->
         <section class="blogs">
             <h2 class="blogs-title">My Blogs</h2>
-            <div class="blogs-container">
-                <article class="blogs-contain">
-                    <h3 class="contain-title">This is My First Blog</h3>
-                    <p class="contain-description">Beyond the practicalities of transportation and accommodation, traveling is an intricate dance between anticipation and the unknown. The mere act of packing a bag becomes a metaphor for embracing the unpredictable, as each adventure brings the promise of unexpected encounters and profound insights.</p>
-                </article>
-                <article class="blogs-contain">
-                    <h3 class="contain-title">This is My Second Blog</h3>
-                    <p class="contain-description">Through traveling, we break down the walls of our routine and engage with the world in ways that challenge preconceptions and broaden our horizons. The vibrant markets, bustling streets, and serene landscapes we encounter become not just photographs in an album, but imprints of emotions and experiences that shape our understanding of the world.</p>
-                </article>
-                <article class="blogs-contain">
-                    <h3 class="contain-title">This is My Third Blog</h3>
-                    <p class="contain-description">Whether it's the thrill of hiking through untamed wilderness, savoring exotic cuisines, or conversing with locals in a foreign tongue, every moment spent traveling becomes a repository of stories waiting to be shared. The connections formed with people of diverse backgrounds foster empathy and bridge cultural gaps, reminding us of our shared humanity.</p>
-                </article>
+            <div class="container">
+                <div class="blogs-container">
+                    <article class="blogs-contain">
+                        <h3 class="contain-title">This is My First Blog</h3>
+                        <p class="contain-description">Beyond the practicalities of transportation and accommodation, traveling is an intricate dance between anticipation and the unknown. The mere act of packing a bag becomes a metaphor for embracing the unpredictable, as each adventure brings the promise of unexpected encounters and profound insights.</p>
+                    </article>
+                    <article class="blogs-contain">
+                        <h3 class="contain-title">This is My Second Blog</h3>
+                        <p class="contain-description">Through traveling, we break down the walls of our routine and engage with the world in ways that challenge preconceptions and broaden our horizons. The vibrant markets, bustling streets, and serene landscapes we encounter become not just photographs in an album, but imprints of emotions and experiences that shape our understanding of the world.</p>
+                    </article>
+                    <article class="blogs-contain">
+                        <h3 class="contain-title">This is My Third Blog</h3>
+                        <p class="contain-description">Whether it's the thrill of hiking through untamed wilderness, savoring exotic cuisines, or conversing with locals in a foreign tongue, every moment spent traveling becomes a repository of stories waiting to be shared. The connections formed with people of diverse backgrounds foster empathy and bridge cultural gaps, reminding us of our shared humanity.</p>
+                    </article>
+                </div>
             </div>
         </section>
         <!-- -----------blog  posts area---------- -->
         <section class="blogs-posts">
             <h2 class="blogs-title">Blog Posts</h2>
+           <div class="container">
             <div class="posts-container">
                 <div class="posts-contain">
                     <img src="asset/images/travel moment1.jpg" alt="business people">
                     <h3 class="contain-title">Post 1 Headline</h3>
                     <p class="posts-description">Sample small text. Lorem ipsum dolor sit amet.</p>
-                    <button class="read">READ MORE</button>
+                    <button class="btn-primary">READ MORE</button>
                 </div>
                 <div class="posts-contain">
                     <img src="asset/images/travel moment.jpg" alt="men handshake">
                     <h3 class="contain-title">Post 2 Headline</h3>
                     <p class="posts-description">Sample small text. Lorem ipsum dolor sit amet.</p>
-                    <button class="read">READ MORE</button>
+                    <button class="btn-primary">READ MORE</button>
                 </div>
                 <div class="posts-contain">
                     <img src="asset/images/travel moment2.jpg" alt="min working">
                     <h3 class="contain-title">Post 3 Headline</h3>
                     <p class="posts-description">Sample small text. Lorem ipsum dolor sit amet.</p>
-                    <button class="read">READ MORE</button>
+                    <button class="btn-primary">READ MORE</button>
                 </div>
             </div>
-            <button class="learn-more">LEARN MORE</button>
+           </div>
+            <button class="btn-primary">LEARN MORE</button>
         </section>
     </main>
     <!-- -----------footer section----------- -->
     <footer class="footer-section">
         <div class="copyright-container">
             <hr class="margin-line">
-        <p class="copyright">©mahmudul-001 2023</p>
+        <p class="copyright">©mahmudul-001 2023 All rights reserved</p>
         </div>
     </footer>
 </body>
